<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".DetailActivity"
    tools:showIn="@layout/detail_activity">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#eeeeee"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/section_spacing"
                android:paddingEnd="@dimen/activity_padding"
                android:paddingStart="@dimen/activity_padding"
                android:paddingTop="@dimen/section_spacing">

                <!-- 현재가 -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/current_price"
                    android:textColor="@color/title" />

                <TextView
                    android:id="@+id/tvPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/value_spacing"
                    android:textColor="@color/current_price"
                    android:textSize="@dimen/subtitle"
                    android:textStyle="bold" />

                <!-- 등락률 -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/field_hspacing"
                    android:text="@string/advanced_decline_rate"
                    android:textColor="@color/title" />

                <TextView
                    android:id="@+id/tvAdr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/value_spacing"
                    android:textColor="@color/title"
                    android:textSize="@dimen/subtitle"
                    android:textStyle="bold" />

                <!-- 전일비 -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/field_hspacing"
                    android:text="@string/advanced_decline_price"
                    android:textColor="@color/title" />

                <TextView
                    android:id="@+id/tvAdp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/value_spacing"
                    android:textColor="@color/title" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#ccc" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/activity_padding">

                <!-- 사이트 링크 -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/field_hspacing"
                    android:text="@string/site_link"
                    android:textColor="@color/black" />

                <!-- 네이버 금융 링크 -->
                <TextView
                    android:id="@+id/tvNaverFinanceLink"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/naver_finance"
                    android:textColor="@color/info" />

                <TextView
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/activity_padding"
                    android:layout_marginStart="@dimen/activity_padding"
                    android:background="#ccc" />

                <!-- 다음 금융 링크 -->
                <TextView
                    android:id="@+id/tvDaumFinanceLink"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/daum_finance"
                    android:textColor="@color/info" />

            </LinearLayout>

            <!-- 사이트 링크 구분 가로 줄 -->
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/value_spacing"
                android:background="#ccc" />

            <!-- 차트 래퍼 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingEnd="@dimen/activity_padding"
                android:paddingStart="@dimen/activity_padding">

                <!-- 일봉 차트 -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/section_spacing"
                    android:text="@string/daily_pipe"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/ivD1Chart"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/naver_chart_height"
                    android:layout_marginTop="@dimen/field_hspacing"
                    android:adjustViewBounds="true"
                    android:background="@drawable/chart_background"
                    android:contentDescription="@null" />

                <!-- 주봉 차트 -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_padding"
                    android:text="@string/weekly_pipe"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/ivW1Chart"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/naver_chart_height"
                    android:layout_marginTop="@dimen/field_hspacing"
                    android:adjustViewBounds="true"
                    android:background="@drawable/chart_background"
                    android:contentDescription="@null" />

                <!-- 3년 차트 -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_padding"
                    android:text="@string/three_years"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/ivYear3Chart"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/daum_chart_height"
                    android:layout_marginTop="@dimen/field_hspacing"
                    android:adjustViewBounds="true"
                    android:background="@drawable/chart_background"
                    android:contentDescription="@null" />

                <!-- 뉴스 래퍼  -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">

                    <!-- 뉴스 -->
                    <TextView
                        android:id="@+id/tvNews"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/news"
                        android:textColor="@color/black"
                        android:textSize="@dimen/title"
                        android:textStyle="bold" />

                    <!-- 네이버 뉴스 -->
                    <TextView
                        android:id="@+id/tvNaverNews"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/section_spacing"
                        android:text="@string/naver_news"
                        android:textColor="@color/info"
                        android:textSize="@dimen/subtitle" />

                    <TextView
                        android:id="@+id/tvNewsSearchSeparator1"
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/activity_padding"
                        android:background="#ccc"
                        android:textColor="@color/muted"
                        android:textSize="@dimen/subtitle" />

                    <!-- 다음 뉴스 -->
                    <TextView
                        android:id="@+id/tvDaumNews"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/activity_padding"
                        android:text="@string/daum_news"
                        android:textColor="@color/info"
                        android:textSize="@dimen/subtitle" />

                    <TextView
                        android:id="@+id/tvNewsSearchSeparator2"
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/activity_padding"
                        android:background="#ccc"
                        android:textColor="@color/muted"
                        android:textSize="@dimen/subtitle" />

                    <!-- 구글 뉴스 -->
                    <TextView
                        android:id="@+id/tvGoogleNews"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/activity_padding"
                        android:text="@string/google_news"
                        android:textColor="@color/info"
                        android:textSize="@dimen/subtitle" />
                </LinearLayout>

                <!-- 뉴스 구분 가로 줄 -->
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/hr_spacing"
                    android:background="#ccc" />

                <!-- 뉴스 리스트뷰 -->
                <com.github.paolorotolo.expandableheightlistview.ExpandableHeightListView
                    android:id="@+id/newsListView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/field_vspacing"
                    android:divider="#ccc"
                    android:dividerHeight="1dp"
                    android:drawSelectorOnTop="true"
                    android:gravity="center"
                    android:listSelector="@drawable/selector"
                    android:scrollbars="none" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>